--- a/13/styles.css
+++ b/13/styles.css
@@ -1,3 +1,7 @@
+*{
+	box-sizing: border-box;
+}
+
 /* reset browser styles */
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, 
@@ -128,3 +132,32 @@ footer a {
 	color: white;	
 }
 /* add tutorial styles below here */
+
+.sidebar1{
+	float: left;
+	width: 20%;
+	padding: 0 20px 0 20px;
+}
+.main{
+	float: left;
+	width: 60%;
+	padding: 0 20px 0 20px;
+	border-left: dashed 1px rgb(153,153,153);
+	border-right: dashed 1px rgb(153,153,153);
+}
+.sidebar2{
+	float: right;
+	width: 20%;
+	padding: 0 10px 0 20px;
+}
+footer{
+	clear: both;
+}
+nav ul, header h1, footer p{
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.contentWrapper{
+	max-width: 1200px;
+	margin: 0 auto;
+}
