--- a/14/styles.css
+++ b/14/styles.css
@@ -112,9 +112,58 @@ footer .copyright {
 }
 
 /* add tutorial styles here */
-
-
-
+header{
+	position: relative;
+	margin-top: 20px;
+	padding: 20px 0 0 20px;
+}
+header .badge{
+	position: absolute;
+	top: -20px;
+	left: -90px;
+	z-index: -1;
+}
+header nav{
+	position: absolute;
+	right: 0;
+	top: 45px;
+}
+.gallery figure{
+	display: inline-block;
+	vertical-align: bottom;
+	width: 300px;
+	height: 210px;
+	margin: 15px;
+	/*overflow: hidden;*/
+	position: relative;
+}
+.gallery figcaption{
+	position: absolute;
+	top: 15%;
+	bottom: 15%;
+	left: 0;
+	right: 0;
+	background-color: rgba(153,153,153,.9);
+	padding: 20px;
+	font-family: Titillium, Arial;
+	font-weight: 400;
+	font-size: .9em;
+	color: white;
+	opacity: 0;
+	transition: opacity .75s ease-out;
+}
+.gallery figure:hover figcaption{
+	opacity: 1;
+}
+footer{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 10px;
+	background-color: black;
+	color: white;
+}
 
 
 
